# ZLLBM

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  config.h.in  参数定义.docx  流程图.pptx
cmake/: build_functions.cmake  mpi_profiling.cmake
examples/: CMakeLists.txt
examples/lbm/: CMakeLists.txt
examples/lbm/immersed_boundary/cylinder2d/: CMakeLists.txt  cylinder2d.cpp
examples/lbm/immersed_boundary/sphere3d/: CMakeLists.txt  sphere3d.cpp
run_cases/test_tmp/: CMakeLists.txt  test_tmp.cpp
source/: config.h  defs_libs.h
source/amr_project/: CMakeLists.txt  amr_manager.cpp  amr_manager.h  auxiliary_inline_func.h  solver_info_interface.cpp  solver_info_interface.h
source/amr_project/criterion/: criterion_manager.h  criterion_manager_geometry.cpp  criterion_numerates.h  default_geo_shape_2d.cpp  default_geo_shape_3d.cpp  default_geo_shape_manager.cpp  geometry_connection_to_grid.cpp  geometry_coordi.h  geometry_default_shape.cpp  geometry_default_shape.h  geometry_default_shape_2d.cpp  geometry_default_shape_3d.cpp  geometry_info_Interface.h  geometry_info_connection.cpp  geometry_info_connection.h  geometry_info_connection_2d.cpp  geometry_info_connection_3d.cpp  geometry_info_connection_3d.cpp.bak  geometry_info_interface.cpp  geometry_info_interface.h  geometry_info_interface_mpi.cpp  geometry_info_origin.cpp  geometry_info_origin.h
source/amr_project/criterion/back/: geometry_info_connection_22-10-23.h  geometry_info_connection_2d_22-10-16.cpp  geometry_info_connection_2d_22-10-18.cpp  geometry_info_connection_2d_22-10-23.cpp
source/amr_project/debug/: CMakeLists.txt  amr_debug.cpp  mpi_manager_debug.cpp
source/amr_project/grid/: coupling_grid_geo.h  grid_enumerates.h  grid_generation_serial.cpp  grid_generation_serial2d.cpp  grid_generation_serial3d.cpp  grid_info.cpp  grid_info_interface.h  grid_info_mpi.cpp  grid_info_preset.cpp  grid_interpolation.cpp  grid_interpolation.hpp  grid_manager.cpp  grid_manager.h  grid_manager2d.cpp  grid_manager2d_mpi.cpp  grid_manager3d.cpp  grid_manager3d_mpi.cpp  grid_manager_mpi.cpp  grid_manager_mpi.cpp.bak  morton_aux mpi.cpp  morton_aux.cpp  morton_aux.hpp  sfbitset_aux.cpp  sfbitset_aux.h  sfbitset_aux_mpi.cpp
source/amr_project/grid/backup/: grid_generation_serial_22-8-29.cpp
source/amr_project/io/: debug_write.cpp  debug_write.h  input_parser.cpp  input_parser.h  io_checkpoint.cpp  io_manager.cpp  io_manager.h  log_write.cpp  log_write.h  output_format.h  vtk_writer.h  vtk_writer_manager.cpp
source/amr_project/mpi/: mpi_checkpoint.cpp  mpi_geometry_info.cpp  mpi_grid_communication.cpp  mpi_grid_info.cpp  mpi_grid_info.cpp.bak  mpi_grid_manager.cpp  mpi_grid_manager.cpp.bak  mpi_grid_manager2d.cpp  mpi_grid_manager3d.cpp  mpi_manager.cpp  mpi_manager.h  mpi_manager_debug.cpp  mpi_morton_aux.cpp  mpi_sfbitset_aux.cpp
source/lbm/: lbm_d2q9.cpp  lbm_info.cpp  lbm_info.h  lbm_manager.h
source/lbm_project/: CMakeLists.txt  fsi_coupling.h  lbm_collision_model_general.cpp  lbm_collision_model_srt.cpp  lbm_d2q9.cpp  lbm_d2q9.h  lbm_grid_interface.cpp  lbm_grid_interface_mpi.cpp  lbm_interface.cpp  lbm_interface.h  lbm_solver_interface.cpp
source/lbm_project/boundary_conditions/: lbm_bounce_back.cpp  lbm_boundary_conditions.cpp  lbm_boundary_conditions.h  lbm_noneq_extrapolation.cpp  lbm_periodic.cpp
source/lbm_project/collision_model/: lbm_collision_model_general.cpp  lbm_collision_model_mrt.cpp  lbm_collision_model_srt.cpp  lbm_collision_models.cpp  lbm_collision_models.h
source/lbm_project/d2q9_model/: bounce_back_d2q9.cpp  boundary_d2q9.h  lbm_d2q9.h  lbm_d2q9_mandatory.cpp  lbm_d2q9_solver.cpp
source/lbm_project/d3q19_model/: lbm_d3q19.h  lbm_d3q19_mandatory.cpp  lbm_d3q19_solver.cpp
source/lbm_project/immersed_boundary/: geometry_ib_shape.cpp  geometry_ib_shape.h  geometry_ib_shape_2d.cpp  geometry_ib_shape_3d.cpp  immersed_boundary.cpp  immersed_boundary.h  immersed_boundary_geometry.h
source/lbm_project/les_models/: lbm_les_models.cpp  lbm_les_models.h  lbm_les_smagorinsky.cpp
source/test_backup/: mpi_grid_manager.cpp
test_cases/test_grid/: CMakeLists.txt  test_grid.cpp
test_cases/test_grid2d/: CMakeLists.txt  test_grid2d.cpp
test_cases/test_grid3d/: CMakeLists.txt  test_grid3d.cpp
